# crust

./: .dockerignore  Cargo.toml  Dockerfile  containerfile  ctrader_open_api.proto  run.sh
.circleci/: config.yml
k8s/: _delete.sh  _install.sh  audcad-cadchf-audchf.yaml  audcad-cadjpy-audjpy.yaml  audchf-chfjpy-audjpy.yaml  audnzd-nzdusd-audusd.yaml  audusd-usdcad-audcad.yaml  audusd-usdchf-audchf.yaml  audusd-usdjpy-audjpy.yaml  cadchf-chfjpy-cadjpy.yaml  euraud-audchf-eurchf.yaml  euraud-audjpy-eurjpy.yaml  euraud-audusd-eurusd.yaml  eurcad-cadchf-eurchf.yaml  eurcad-cadjpy-eurjpy.yaml  eurchf-chfjpy-eurjpy.yaml  eurgbp-gbpchf-eurchf.yaml  eurgbp-gbpjpy-eurjpy.yaml  eurgbp-gbpusd-eurusd.yaml  eurnzd-nzdusd-eurusd.yaml  eurusd-usdcad-eurcad.yaml  eurusd-usdchf-eurchf.yaml  eurusd-usdjpy-eurjpy.yaml  gbpaud-audusd-gbpusd.yaml  gbpusd-usdcad-gbpcad.yaml  gbpusd-usdchf-gbpchf.yaml  gbpusd-usdjpy-gbpjpy.yaml  nzdusd-usdcad-nzdcad.yaml  nzdusd-usdchf-nzdchf.yaml  nzdusd-usdjpy-nzdjpy.yaml  usdcad-cadchf-usdchf.yaml  usdcad-cadjpy-usdjpy.yaml  usdchf-chfjpy-usdjpy.yaml
notes/: bbs_ssb_calculations  combinations  symbols_ids
src/: combination.rs  ctrader_open_api.rs  decoder.rs  encoder.rs  engagement.rs  flag.rs  main.rs  mod.rs  sender.rs  starter.rs  symbol.rs
src/engagement/: cancel_order.rs  close.rs  close_position.rs  mod.rs  open.rs  symbol_1.rs  symbol_2.rs  symbol_3.rs
src/processors/: execution_event_processor.rs  mod.rs  reconcile_processor.rs  spot_event_processor.rs
