[package]
authors = ["raul-gherman"]
edition = "2021"
name = "crust"
version = "8.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
derivative = "2.2.0"
env_logger = "0.10.0"
log = "0.4.20"
prost = "0.12.3"
tungstenite = {version = "0.20.1", features = ["native-tls"]}
url = "2.2.2"
